0.1.23
	o set ymax to min 5 for absolute numbers in regio-schaal plot
0.1.22
	o format ticks to integer in regio-schaal plot
0.1.21
	o update openingstijden_grofwild.csv
	o default show map for landkaart 2 - wildschade
	o include type in filename for data export - grofwild
	o landkaart 1  sliders start at 2018 - wildschade
	o bio-indicator: Onderkaaklengte per jaar - sliders correct now - grofwild 
	o 5UTM starts at 2014 - grofwild
0.1.20
	o update readme.md for extdata
	o remove default selection species/schade type in wildschade
	o upgrade labels for schade voertuig
	o include median, min, max in data export percentage jaarlijks afschot - grofwild 
	o add percentage of total data map - grofwild
0.1.19
	o update landkaart 2 wildschade to satellite background
0.1.18
	o include check for new schadecodes
	o update fullNames() to deal with non matching names
0.1.17
	o include package version in app title and browser tabpage title
0.1.16
	o 2-step approach for grofwild download map to prevent time-out
	o fix 'voeg landkaart toe'-button for landkaart 2 in wildschade 
0.1.15
    o grofwild includes 5x5 utm regionlevel for map
0.1.14
    o fix INBO title next to tabs
    o update readme.md file on extdata
    o landkaart wildschade 2 now colors points by variable
    o update tests landkaart 2 wildschade
0.1.13
    o default value for slider inputs (year and max of year range ) set to 'currentYear - 1'
    o landkaart2 wildschade download update
    o simplify postcode and niscode matching
    o decrypt schadetype names everywhere
0.1.12
    o use type_comp instead of ageGender in loadRawData()
0.1.11
    o fix mismatch commune names shape data
0.1.10
	o final updates: new wildschade data
	o fix special characters in texts
0.1.9
	o include test for schadetable per gewas
	o monitor new wildsoorten
	o include texts
0.1.8
	o extend schadetable per gewas with user choices and data download
0.1.7
	o schadetable columns upon user choices
	o update and extend tests
0.1.6