@@ -15,24 +15,35 @@ tagList(
                 
                 tags$p(class = "lead", "Op deze pagina kunt u de afschotgegevens voor elk van de vier bejaagde grofwildsoorten binnen het Vlaams gewest van de laatste jaren raadplegen."),
                 
-                tags$p("De bron voor de kaarten, figuren en tabellen wordt gevormd door het",
-                        tags$a(href = "https://www.natuurenbos.be/e-loket", "E-loket van het Agentschap voor Natuur en Bos", target = "_blank"),
-                        "gecombineerd met door het INBO uitgevoerde metingen op ingezamelde stalen (onderkaken en baarmoeders)."),
-                
-                tags$p("Bovenaan deze pagina krijgt u, in functie van de gekozen jachtwildsoort, de regio-schaal en de gewenste jaren en periodes,", tags$br(),"een kaart met de geografische spreiding van het afschot en een figuur met de evolutie van het afschot de laatste jaren.",
-                        "Daaronder kunnen verdere grafieken worden aangeklikt, die telkens kunnen worden aangepast naargelang de informatie die u zelf wenst te visualiseren."),
-                
-                tags$p(paste0("Onderstaande tabellen en figuren zijn gebaseerd op de beschikbare gegevens op ",format(max(as.Date(ecoData$afschot_datum), na.rm = T), "%d/%m/%Y") , 
-                                ". Een deel van de data van het voorbije kwartaal kunnen dus mogelijk nog niet opgenomen zijn in de dataset.")
-                ),
-                tags$p("Indien u fouten zou ontdekken of merkt dat data ontbreken gelieve dit dan te melden via een email naar",
-                        tags$a(href="mailto:faunabeheer@inbo.be?SUBJECT=Grofwildjacht web applicatie", target="_blank", "faunabeheer@inbo.be")
+                tags$p(tags$b(tags$u("Gebruiksinfo:")), tags$br(),
+                       tags$ul(
+                            tags$li("Bovenaan deze pagina krijgt u, in functie van de gekozen wildsoort, de regio-schaal en de gewenste jaren en periodes, een kaart met de geografische 
+																		 spreiding van het afschot en een figuur met de evolutie van het afschot voor de gekozen periode."), 
+                            tags$li("Onder de verspreidingskaart kunnen verdere grafieken en tabellen worden opengeklikt, die telkens kunnen worden aangepast in functie van de informatie 
+																		 die u wenst te visualiseren."), 
+                            tags$li("Onderstaande tabellen en figuren zijn gebaseerd op de beschikbare gegevens op ", format(max(as.Date(ecoData$afschot_datum), na.rm = T), 
+                                    "%d/%m/%Y"), ". Een deel van de data van het voorbije kwartaal kunnen dus mogelijk nog niet opgenomen zijn in de dataset."),
+                            tags$li("De bron voor de kaarten, figuren en tabellen wordt gevormd door het",
+                                    tags$a(href = "https://www.natuurenbos.be/e-loket", "E-loket van het Agentschap voor Natuur en Bos", target = "_blank"),
+                                    ", gecombineerd met door het INBO uitgevoerde metingen op ingezamelde stalen (onderkaken en baarmoeders)."),
+                            tags$li("De data achter de figuren en tabellen kan je steeds downloaden als ruwe data."),
+                            tags$li("De figuren zelf kan je ook als .png downloaden."),
+                            tags$li("Indien u fouten zou ontdekken of merkt dat data ontbreken gelieve dit dan te melden via een email naar",
+                                tags$a(href="mailto:faunabeheer@inbo.be?SUBJECT=Grofwildjacht web applicatie", target="_blank", "faunabeheer@inbo.be"), ".")
+                      )
                 )
+
         
         ),
          
         # Select species
+    
+        tags$div(class = "container",
+            
+            h2("Grofwildsoort")),
+    
         tags$div(class = "container", 
+            
         						align = "center", 
 								tags$div(class = "noButton",
                 radioButtons(inputId = "wild_species", label = "", inline = TRUE,
@@ -147,8 +158,8 @@ tagList(
                                                     
                                                     column(4,
                                                             optionsModuleUI(id = "wild_table1", showYear = TRUE, exportData = TRUE),
-                                                            tags$p("Het gerapporteerd aantal geschoten dieren per provincie en per leeftijdscategorie voor het geselecteerde jaar in combinatie met de trend over de voorbije 1, 5 of 10 jaren.",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")
+                                                            tags$p("Het gerapporteerd aantal geschoten dieren per provincie en per leeftijdscategorie voor het geselecteerde jaar in combinatie met de verandering ten opzichte van de voorbije 1, 5 en 10 jaren. 
+																																		Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")
                                                     ),
                                                     column(8, tableModuleUI(id = "wild_table1"))
                                             
@@ -228,7 +239,7 @@ tagList(
                                 
                                 column(4,
                                         optionsModuleUI(id = "wild_plot1", showTime = TRUE, exportData = TRUE),
-                                        tags$p("Het gerapporteerd aantal geschoten en dood gevonden dieren per jaar in de verschillende provincies voor de geselecteerde periode (cijfers geven het totaal aantal voor dat jaar weer).")
+                                        tags$p("Het gerapporteerd aantal geschoten dieren per jaar in de verschillende provincies voor de geselecteerde periode (cijfers geven het totaal aantal voor dat jaar weer).")
                                 ),
                                 column(8, plotModuleUI(id = "wild_plot1"))
                         
@@ -250,7 +261,7 @@ tagList(
                                                     
                                                     column(4,
                                                             optionsModuleUI(id = "wild_plot2", showTime = TRUE, exportData = TRUE),
-                                                            tags$p("Vergelijking tussen de leeftijd zoals aangeduid op het meldingsformulier en de leeftijd bepaald op basis van een ingezamelde onderkaak")
+                                                            tags$p("Vergelijking tussen de leeftijd zoals aangeduid op het meldingsformulier en de leeftijd bepaald door het INBO op basis van een ingezamelde onderkaak.")
                                                     ),
                                                     column(8, plotModuleUI(id = "wild_plot2"))
                                             
@@ -270,7 +281,7 @@ tagList(
                                                                             "Percentage (enkel ingezamelde onderkaken)" = "percent"),
                                                                     showTime = TRUE,
                                                                     regionLevels = 1:2, exportData = TRUE),
-                                                            tags$p("Evolutie van de verdeling van het afschot over de verschillende leeftijdscategorieën doorheen de jaren op basis van de ingezamelde onderkaak."),
+                                                            tags$p("Evolutie van de verdeling van het afschot over de verschillende leeftijdscategorieën doorheen de jaren op basis van de ingezamelde onderkaken."),
                                                             conditionalPanel("input.wild_species == 'Ree'",
                                                                     "Voor mannelijke reeën zijn de leeftijdscategorieën 'jongvolwassen' en 'volwassen' uitgesloten.")
                                                     ),
@@ -289,8 +300,8 @@ tagList(
                                                             optionsModuleUI(id = "wild_plot4",
                                                                     showTime = TRUE, showYear = TRUE,
                                                                     showType = TRUE, exportData = TRUE),
-                                                            tags$p("Procentuele verdeling van het afschot (voor ree per labeltype) doorheen het openingsseizoen van het geselecteerde jaar in verhouding tot de verdeling in de geselecteerde referentieperiode.",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")
+                                                            tags$p("Procentuele verdeling van het afschot (voor ree per labeltype) doorheen het openingsseizoen van het geselecteerde jaar in verhouding tot de verdeling over alle jaren gedurende de geselecteerde referentieperiode. 
+																																		Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier gebruikt.")
                                                     ),
                                                     column(8, plotModuleUI(id = "wild_plot4"))
                                             
@@ -307,8 +318,8 @@ tagList(
                                                     
                                                     column(4,
                                                             optionsModuleUI(id = "wild_plot5", showTime = TRUE, exportData = TRUE),
-                                                            tags$p("Geslachtsverdeling per leeftijdscategorie voor de geselecteerde periode.",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")
+                                                            tags$p("Geslachtsverdeling per leeftijdscategorie voor de geselecteerde periode. 
+																																		Indien de leeftijdscategorie o.b.v. de ingezamelde onderkaak gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier gebruikt.")
                                                     ),
                                                     column(8, plotModuleUI(id = "wild_plot5"))
                                             
@@ -325,8 +336,8 @@ tagList(
                                                     column(4,
                                                             optionsModuleUI(id = "wild_plot6", showTime = TRUE, showType = TRUE,
                                                                     regionLevels = 1:2, exportData = TRUE),
-                                                            tags$p("Verdeling van de leeggewichten per leeftijdscategorie en per geslacht voor alle gegevens uit de geselecteerde periode en regio('s).",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald."),
+                                                            tags$p("Verdeling van de leeggewichten per leeftijdscategorie en per geslacht voor alle gegevens uit de geselecteerde periode en regio('s). 
+																																		Indien de leeftijdscategorie o.b.v. de ingezamelde onderkaak gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier gebruikt."),
                                                             conditionalPanel("input.wild_species == 'Ree'",
                                                                     "Voor ree: geen data beschikbaar voor 2014.")
                                                     ),
@@ -355,17 +366,17 @@ tagList(
                                                     column(4,
                                                             optionsModuleUI(id = "wild_plot7", showTime = TRUE, showType = TRUE,
                                                                     regionLevels = 1:2, exportData = TRUE),
-                                                            tags$p("Verdeling van de onderkaaklengte per leeftijdscategorie en per geslacht voor alle gegevens uit de geselecteerde periode en regio('s).",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")),
+                                                            tags$p("Verdeling van de onderkaaklengte per leeftijdscategorie en per geslacht voor alle gegevens uit de geselecteerde periode en regio('s).
+																																		Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")),
                                                     column(8, plotModuleUI(id = "wild_plot7"))
                                             
                                             ),
                                             tags$hr()
                                     ),
                                     
-                                    h3("Bio-indicatoren"),
-                                    tags$p("Bio-indicatoren zijn ecologische parameters, die betrekking hebben op de relatie tussen een populatie en de draagkracht van het gebied en gevoelig zijn voor veranderingen in populatieaantallen en/of in de draagkracht van het gebied.",
-                                            "In dit geval dus de relatie tussen het aantal reeën in een gebied en de draagkracht van dat gebied. Voor ree werd aangetoond dat van zodra de draagkracht van een gebied wordt benaderd dit zich vertaalt in kleinere reekitsen (lichtere gewichten en kortere onderkaken), een lager percentage drachtige geiten en smalreeën en in gemiddeld kleinere worpen."),
+                                    h2("Bio-indicatoren"),
+                                    tags$p("Bio-indicatoren zijn ecologische parameters, die betrekking hebben op de relatie tussen een populatie en de draagkracht van het gebied en gevoelig zijn voor veranderingen in populatieaantallen en/of in de draagkracht van het gebied.
+																						In dit geval dus de relatie tussen het aantal reeën in een gebied en de draagkracht van dat gebied. Voor ree werd aangetoond dat van zodra de draagkracht van een gebied wordt benaderd, dit zich vertaalt in kleinere reekitsen (lichtere gewichten en kortere onderkaken), een lager percentage drachtige geiten en smalreeën en in gemiddeld kleinere worpen."),
                                     actionLink(inputId = "wild_linkPlot8",
                                             label = h3("FIGUUR: Onderkaaklengte per jaar")),
                                     conditionalPanel("input.wild_linkPlot8 % 2 == 1",
@@ -375,8 +386,8 @@ tagList(
                                                             optionsModuleUI(id = "wild_plot8", showTime = TRUE, showType = TRUE,
                                                                     regionLevels = 1:2, exportData = TRUE,
                                                                     showDataSource = TRUE),
-                                                            tags$p("Verdeling van de onderkaaklengte voor alle gegevens uit de geselecteerde periode, regio('s) en type(s).",
-                                                                    "Indien de leeftijdscategorie van INBO (o.b.v. onderkaak) gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier bepaald.")
+                                                            tags$p("Verdeling van de onderkaaklengte voor alle gegevens uit de geselecteerde periode, regio('s) en type(s). 
+																																		Indien de leeftijdscategorie van INBO o.b.v. ingezamelde onderkaak gekend is, wordt deze gebruikt, anders wordt de leeftijdscategorie volgens het meldingsformulier gebruikt.")
                                                     ),
                                                     column(8, plotModuleUI(id = "wild_plot8"))
                                             ),
@@ -391,8 +402,8 @@ tagList(
                                                             optionsModuleUI(id = "wild_plot9",
                                                                     showTime = TRUE, showType = TRUE,
                                                                     regionLevels = 1:2, exportData = TRUE),
-                                                            tags$p("Evolutie van de gemodelleerde leeggewichten (met 95% betrouwbaarheidsinterval) doorheen de geselecteerde jaren voor de gekozen regio en types."),
-                                                            tags$p("Observaties met leeggewicht < 5kg of > 25kg zijn niet opgenomen in de figuur.")
+                                                            tags$p("Evolutie van de gerapporteerde leeggewichten (met 95% betrouwbaarheidsinterval) doorheen de geselecteerde jaren voor de gekozen regio en types."),
+                                                            tags$p(tags$i("Opmerking: Observaties met leeggewicht < 5kg of > 25kg zijn niet opgenomen in de figuur."))
                                                     ),
                                                     column(8, plotModuleUI(id = "wild_plot9"))
                                             
