@@ -1,3 +1,5 @@
+	o teksten grofwild adjusted
+	o teksten wildschade adjusted (in progress)
 0.1.23
 	o set ymax to min 5 for absolute numbers in regio-schaal plot
 0.1.22
